[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vec2d"
version = "0.0.1"
authors = [
  { name="Marton Karacsony", email="" },
]
description = "2D vector implementation using numpy."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]